# djangowhiteboard

./: README.md  db.sqlite3  manage.py  package.json  pyproject.toml
djangp_whiteboard/: asgi.py  settings.py  urls.py  wsgi.py
djangp_whiteboard/templates/: index.html
utils/: decorators.py
web/: package-lock.json  package.json
web/.parcel-cache/: 771bf8dc887d784d.txt  c4d8bcea7d705f7a.txt  data.mdb  lock.mdb
web/src/: convert.ts  handlers.ts  index.ts
whiteboard/: consumer.py  models.py  views.py
whiteboard/migrations/: 0001_initial.py
