[tool.poetry]
name = "django-whiteboard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
django-extensions = "^3.1.3"
channels = "^3.0.4"
channels-redis = "^3.3.1"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
black = {version = "^21.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
